correcting image spacing issue

--- a/blocks/banner-carousel/banner-carousel.css
+++ b/blocks/banner-carousel/banner-carousel.css
@@ -1,17 +1,12 @@
 .banner-carousel-container {
-    /* position: relative;
-    overflow: auto;
-    width: 100%;
-    height: 100%; */
     position: relative;
     width: 100%;
     height: 500px;
-    object-fit: cover;
+    
 }
 
 .banner-carousel .carousel-slides-container {
     position: relative;
-    padding-bottom: 15px;
     height: 30rem;
 }
 
@@ -41,11 +36,15 @@
 }
 
 .banner-carousel .carousel-slide .carousel-slide-image picture > img {
-    height: 50%;
-    width: auto;
-    object-fit: cover;
+    height: 30rem;
+    object-fit: fill;
     display: flex;
     opacity: .99;
+    max-width: 150%;
+    max-height: 150%;
+    min-width: 50%;
+    min-height: 50%;
+
 }
 
 
@@ -72,7 +71,7 @@
     height: .65rem;
     padding: 0;
     border-radius: 1rem;
-    background-color: rgba(249, 246, 246, 0.2);
+    background-color: rgba(248 242 242/ 20%);
     outline: oldlace 1px solid;
     z-index: 5;
 }
@@ -111,16 +110,6 @@
     min-width: 110%;
 }
 
-/* .banner-carousel .carousel-slide .carousel-slide-image picture::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(0 0 0 / 5%); 
-    } */
 
 .banner-carousel .carousel-navigation-buttons {
     position: absolute;
@@ -234,16 +223,7 @@
         min-width: 100%;
     }
 
-    .banner-carousel .carousel-slide .carousel-slide-image picture::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0 0 0 / 20%); /* Change the color and opacity as needed */
-      }
+   
 
     .banner-carousel .carousel-navigation-buttons {
         position: absolute;
@@ -270,7 +250,7 @@
 
     .banner-carousel .carousel-navigation-buttons button:hover,
     .banner-carousel .carousel-navigation-buttons button:focus-visible {
-        background-color: rgba(0 0 0 / 50%);
+        background-color: rgba(0 0 0 / 20%);
     }
 
     .banner-carousel .carousel-navigation-buttons button::after {
@@ -299,13 +279,13 @@
     }
 
     .banner-carousel .carousel-navigation-buttons button {
-        width: 3.5rem;
-        height: 3.5rem;
+        width: 1.5rem;
+        height: 1.5rem;
     }
 
     .banner-carousel .carousel-navigation-buttons button::after {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: .7rem;
+        height: .7rem;
     }
 
     .banner-carousel .carousel-slide .carousel-slide-content {
@@ -327,8 +307,33 @@
         background-color: white;
     }
 
+    .banner-carousel .carousel-slide .carousel-slide-image picture > img {
+        height: auto;
+        width: 100%;
+        object-fit: fill;
+        display: flex;
+        opacity: .99;
+        max-width: 100%;
+        max-height: 100%;
+        min-width: 100%;
+        min-height: 50%;
     
+    }
     
+    .banner-carousel-container {
+        position: relative;
+        width: 100%;
+        height: 500px;
+        
+    }
+
+    .banner-carousel .carousel-slide-indicators {
+        display: flex;
+        justify-content: center;
+        gap: 0.75rem;
+        transform: translate(-0%, -400%);
+        top: -70px;
+    }
 
     
 
